[metadata]
name = hslog
version = 1.17.1
description = Hearthstone Power.log parser
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/python-hslog/
download_url = https://github.com/HearthSim/python-hslog/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Games/Entertainment

[options]
packages = find:
install_requires =
	aniso8601
	hearthstone

[options.packages.find]
exclude = tests
